--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Sapnil-Bhowmick.github.io/NIKE-Landing-Page",
   "name": "nike",
   "private": true,
   "version": "0.0.0",
